--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         
-        
+        <div></div>
 
 
         <script src="js/main.js" type="text/javascript"></script>
