--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
     </head>
     <body>
         
-        <div></div>
-
-
+        <section id="team">
+            <div class="container">
+              <h2 class="section-title">Our team</h2>
+              <p class="section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in
+                varius ante. Sed quis luctus eros. Phasellus rutrum laoreet leo in
+                consequat.
+              </p>
+              <div class="team-container">
+              </div>
+            </div>
+          </section>
         <script src="js/main.js" type="text/javascript"></script>
     </body>
 </html>
